<resources>
    <string name="app_name">ECG-Logboek</string>
    <string name="AlertTitle">ECG Logboek</string>
    <string name="beforeTimeSubTitle">Wat heeft u tussen&#160;</string>
    <string name="betweenTimeSubTitle">&#160;en&#160;</string>
    <string name="afterTimeSubTitle"> &#160;gedaan?</string>
    <string name="ok">ok</string>
    <string name="notificationTitle">ECG Logboek!</string>
    <string name="notificationText">Wat heeft u het afgelopen uur gedaan?</string>
    <string name="title_activity_first_time">Setup</string>
    <string name="dag">Dag</string>
    <string name="instructionsTitle">Lees dit zorgvuldig door voordat u begint!</string>
    <string name="instructionsIntro"><![CDATA[U gaat voor 24 uur een logboek bijhouden met uw activiteiten.
Als eerste volgt een scherm waarop wij een aantal basisgegevens van u vragen.
Dit zijn: <br>
&#8226; Leeftijd<br>
&#8226; Gewicht<br>
&#8226; Lengte<br>

Deze data wordt niet persoonlijk aan u gekoppelt, helemaal anoniem verwerkt.<br>

Vervolgens krijgt u om het hele uur een notificatie, waarmee we u vragen de activiteiten van dat uur in te vullen.
Mocht u tussentijds al zaken willen invullen, dan wel achteraf wijzigingen willen aanbrengen,
dan kunt u de app gewoon openen. U krijgt dan een overzicht te zien van alle uren en welke wel en niet ingevuld zijn.<br>

Na 24 uur kunt u de data verzenden. Hiervoor drukt u op de verzenden knop rechtsbovenin. U kunt hiervoor gebruik maken van uw e-mail app. De data wordt dan automatisch in de e-mail gestopt. U kunt handmatig het e-mail adres invullen dat aan u is gegeven bij deelname aan deze test
Na verzenden bent u klaar en kunt u de app desgewenst deïnstalleren.<br>

Hartelijk dank voor het testen van deze app!]]>
</string>
    <string name="age">Leeftijd:</string>
    <string name="weight">Gewicht(in kg):</string>
    <string name="length">Lengte(in cm):</string>
    <string name="back">Terug</string>
    <string name="done">Klaar</string>
    <string name="pleaseData">Vul de volgende gegevens in:</string>
</resources>
